refactor(tests): simplify type casting in authentication and family service tests